--- a/CV-Lab.ipynb
+++ b/CV-Lab.ipynb
@@ -13,7 +13,7 @@
    "id": "fa5c93be-d1b2-4593-9120-f5701825d094",
    "metadata": {},
    "source": [
-    "### Diving deep into the realm of computer vision, my work in image processing is all about transforming pixels into powerful insights. From enhancing image quality to detecting intricate patterns, I’m passionate about making machines see the world with clarity and precision. Through innovative algorithms and cutting-edge technology, I strive to push the boundaries of what’s possible, turning raw images into valuable data that can drive decisions, improve efficiencies, and unveil new perspectives. 🚀📸"
+    "##### Diving deep into the realm of computer vision, my work in image processing is all about transforming pixels into powerful insights. From enhancing image quality to detecting intricate patterns, I’m passionate about making machines see the world with clarity and precision. Through innovative algorithms and cutting-edge technology, I strive to push the boundaries of what’s possible, turning raw images into valuable data that can drive decisions, improve efficiencies, and unveil new perspectives. 🚀📸"
    ]
   },
   {
